<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/tvDetailsCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/Creator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvDetailCredit" />

    <ImageView
        android:id="@+id/ivDetailsComics"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toTopOf="@+id/tvDetailsPublicationDate"
        app:layout_constraintEnd_toStartOf="@+id/tvDetailsDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsTitle"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvDetailsPageCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/PageCount"
        app:layout_constraintEnd_toEndOf="@+id/tvDetailsPublicationDate"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsPublicationDate" />

    <TextView
        android:id="@+id/tvDetailsDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Price"
        app:layout_constraintEnd_toStartOf="@+id/tvDetailsPageCount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsPublicationDate" />

    <TextView
        android:id="@+id/tvDetailsPublicationDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/PublicationDate"
        app:layout_constraintStart_toStartOf="@+id/tvDetailsInformations"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsInformations" />

    <TextView
        android:id="@+id/tvDetailsInformations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginBottom="202dp"
        android:text="@string/Informations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvDetailCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Credits"
        app:layout_constraintBottom_toTopOf="@+id/tvDetailsCreator"
        app:layout_constraintEnd_toEndOf="@+id/tvDetailsInformations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDetailsDate" />

    <TextView
        android:id="@+id/tvDetailsDiamondCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/DiamondCode"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDetailsPageCount"
        app:layout_constraintStart_toEndOf="@+id/tvDetailsPageCount" />

    <TextView
        android:id="@+id/tvDetailsDescription"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivDetailsComics"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="52dp"
        android:text="@string/comicsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>